@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2012-08-09 Steve
+	* Updated usage of HforToolD3PD to use removalmode = ALL
+
 2012-08-08 Steve
 	* Now setting lepton efficiency SF to 1 if running on data
 
